Bezig registreren + klantDAO

--- a/WebContent/styles/default.css
+++ b/WebContent/styles/default.css
@@ -75,6 +75,10 @@ nav ul {
 	display: inline;
 	list-style: none;
 }
+.error_list{
+	list-style: square;
+	color: red;
+}
 
 nav li {
 	display: inline;
